# autoresearch-rl-scaffold

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.learnings/: ERRORS.md  LEARNINGS.md
configs/: example.yaml
docs/: ARCHITECTURE.md  VERIFICATION_MATRIX.md
docs/research/: AutoResearch-RL-Perpetual-Self-Evaluating-RL-Agents.md  Basilica-Integration-Analysis.md  Experiment-Report-Basilica-Grid-Search.md  SDFT-Softmax-Divergence-Fine-Tuning.md  SDPO-Self-Distilled-Policy-Optimization.md  Vivek-AutoResearch-RL-Gap-Analysis.md
examples/: README.md
examples/autoresearch-like/: README.md  example.yaml  prepare.py  program.md  run.py  train.py
examples/autoresearch-style-contract/: README.md  example.yaml  prepare.py  program.md  run_contract_demo.py  train.py
examples/basilica-grpo/: Dockerfile  README.md  example.yaml  run.py  train.py
examples/deberta-prompt-injection/: README.md  example.yaml  requirements.txt  run.py  train.py
examples/deberta-prompt-injection/data/: train.jsonl  val.jsonl
examples/minimal-trainable-target/: README.md  run.py  train.py
scripts/: benchmark_baselines.py  run_once.py  verify_matrix.sh
src/autoresearch_rl/: cli.py  config.py
src/autoresearch_rl/controller/: continuous.py  contract.py  loop.py
src/autoresearch_rl/eval/: judge.py  metrics.py  scoring.py
src/autoresearch_rl/policy/: baselines.py  interface.py  learned.py  search.py
src/autoresearch_rl/sandbox/: ast_policy.py  diff_utils.py  runner.py  validator.py
src/autoresearch_rl/telemetry/: distill.py  events.py  ledger.py  manifest.py  run.py
tests/: test_ast_policy.py  test_cli.py  test_contract.py  test_ledger.py  test_loop_autonomy.py  test_metrics.py  test_policy_baselines.py  test_runner.py  test_runner_forecast.py  test_scaffold.py
