[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-rl"
version = "0.2.0"
description = "Continuous autoresearch RL runner"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.scripts]
autoresearch-rl = "autoresearch_rl.cli:app"

[project.optional-dependencies]
http = [
  "requests>=2.28",
]
basilica = [
  "basilica-sdk>=0.20",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
